use 'data-value' everywhere instead of an arbitrary name for js data

--- a/ext_coffee/test/fixtures/files/concepts/routes.html
+++ b/ext_coffee/test/fixtures/files/concepts/routes.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Js.RoutesConcept</h1>
-    <div class="js_routes" data-paths='{
+    <div class="js_routes" data-value='{
       "root": "/",
       "home": "/home/:lang/:page",
       "next": "/page/:next/",
