--- a/ext_coffee/test/fixtures/files/core_ext/i18n.html
+++ b/ext_coffee/test/fixtures/files/core_ext/i18n.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>I18n</h1>
-    <div class="js_i18n" data-translations='{
+    <div class="js_i18n" data-value='{
       "fr": {
         "dog": "Chien"
       }
