- use a more generic scope for elements; - component/element tests corrections; - use one-way binding on submitter elements;

--- a/ext_coffee/test/fixtures/files/concepts/component.html
+++ b/ext_coffee/test/fixtures/files/concepts/component.html
@@ -18,7 +18,10 @@
     <div class="js_component" data-element="banner" data-watch='[
       "banner"
     ]'></div>
-    <div class="js_component" data-element="card" data-scoped data-watch='{
+    <div class="js_component" data-element="banner" data-scope="card" data-watch='[
+      "banner"
+    ]'></div>
+    <div class="js_component" data-element="card" data-scope="card" data-watch='{
       "banner": "Today",
       "players": ["Player 1", "Player 2"]
     }' data-static='{
