--- a/ext_coffee/test/fixtures/files/concepts/classes.html
+++ b/ext_coffee/test/fixtures/files/concepts/classes.html
@@ -11,5 +11,6 @@
     <div class="js_simple_rows"></div>
     <div class="js_simple_rows"></div>
     <div class="js_simple_rows"></div>
+    <div class="js_simple_name"></div>
   </body>
 </html>
