- Js.TagConcept '.js_tag_input' option added to update outputs on input change through data-for and data-format; - allow to call functions instead of methods with 'data-cast' and 'data-format' - 'data-args' added; - added Rails.find({ id }) with getElementById usage;

--- a/ext_coffee/test/fixtures/files/concepts/component.html
+++ b/ext_coffee/test/fixtures/files/concepts/component.html
@@ -30,5 +30,8 @@
     <div class="js_component" data-element="banner" data-static='{
       "banner": "Header"
     }'></div>
+    <input name="tag" type="text" class="js_tag_input" data-for="output label" data-cast="to_date" />
+    <label id="label">Label</label>
+    <output id="output" data-format="strftime" data-args='"%Y-%m-%d %H:%M:%S %Z"'>Output</output>
   </body>
 </html>
