- refactored Js.Component.Element scope option; - added value change event hooks to Js.Component.Element;

--- a/ext_coffee/test/fixtures/files/concepts/component.html
+++ b/ext_coffee/test/fixtures/files/concepts/component.html
@@ -6,18 +6,12 @@
   </head>
   <body>
     <h1>Js.ComponentConcept</h1>
-    <div class="js_component" data-element="global" data-turbolinks-permanent data-watch='{
+    <div class="js_component" data-element="banner" data-turbolinks-permanent data-watch='{
       "banner": "Persistent World!"
     }'></div>
-    <div class="js_component" data-element="global" data-watch='{
+    <div class="js_component" data-element="banner" data-watch='{
       "banner": "Hello World!"
     }'></div>
-    <div class="js_component" data-element="banner" data-turbolinks-permanent data-watch='[
-      "banner"
-    ]'></div>
-    <div class="js_component" data-element="banner" data-watch='[
-      "banner"
-    ]'></div>
     <div class="js_component" data-element="banner" data-scope="card" data-watch='[
       "banner"
     ]'></div>
